# raytracing

./: Cargo.toml
src/: camera.rs  hittable.rs  lib.rs  main.rs  material.rs  ray.rs  texture.rs  time_utils.rs  units.rs  vec3.rs
src/hittable/: aabb.rs  bvh.rs  instances.rs  interval.rs  quad.rs  sphere.rs
src/texture/: perlin.rs
