[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.14.0", features = ["allocator_api"] }
glamour = "0.8.0"
image = "0.24.7"
indicatif = { version = "0.17.6", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.7.0"
